rules.v4
*filter
:INPUT DROP [1:40]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [5945:13878446]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags ALL ALL -m limit --limit 1/sec --limit-burst 3 -j LOG --log-prefix "TCP ALL Flags Rate Limit: "
-A INPUT -p tcp -m tcp --tcp-flags ALL ALL -m limit --limit 1/sec --limit-burst 3 -j DROP
-A INPUT -p tcp -m tcp --tcp-flags ALL NONE -m limit --limit 1/sec --limit-burst 3 -j LOG --log-prefix "TCP NONE Flags Rate Limit: "
-A INPUT -p tcp -m tcp --tcp-flags ALL NONE -m limit --limit 1/sec --limit-burst 3 -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j LOG --log-prefix "TCP NULL Scan: "
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j LOG --log-prefix "TCP SYN-FIN Scan: "
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,PSH,URG FIN,PSH,URG -j LOG --log-prefix "TCP XMAS Scan: "
-A INPUT -p tcp -m tcp --tcp-flags FIN,PSH,URG FIN,PSH,URG -j DROP
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j LOG --log-prefix "TCP SYN-RST Scan: "
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j LOG --log-prefix "TCP FIN-RST Scan: "
-A INPUT -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,ACK FIN -j LOG --log-prefix "TCP FIN-ACK Scan: "
-A INPUT -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A INPUT -p tcp -m tcp --tcp-flags PSH,ACK PSH -j LOG --log-prefix "TCP PSH-ACK Scan: "
-A INPUT -p tcp -m tcp --tcp-flags PSH,ACK PSH -j DROP
-A INPUT -p tcp -m tcp --tcp-flags ACK,URG URG -j LOG --log-prefix "TCP URG Scan: "
-A INPUT -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP
-A INPUT -p tcp -m tcp --dport 22222 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN -m recent --set --name nmap-scan --mask 255.255.255.255 --rsource -j LOG --log-prefix "NMAP Scan Detected: "
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN -m recent --set --name nmap-scan --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec --limit-burst 3 -j LOG --log-prefix "TCP SYN Rate Limit: "
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec --limit-burst 3 -j DROP
-A INPUT -j LOG --log-prefix "Packet Dropped: "
COMMIT

*nat
:PREROUTING ACCEPT [3366:165113]
:INPUT ACCEPT [1586:82341]
:OUTPUT ACCEPT [4520:278689]
:POSTROUTING ACCEPT [889:39116]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
